--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-router": "^7.8.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^4.1.12",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
